allow decimal points, fix some spacing

--- a/src/app.scss
+++ b/src/app.scss
@@ -58,3 +58,13 @@ h1, h2, h3, h4, h5, h6 {
      color: #d10406;
    }
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
